unpackaged/main/default/objects/AccountContactRelation/fields/AccountFlagReason__c.field-meta.xml
<CustomField>
    <fullName>AccountFlagReason__c</fullName>
    <formula>TEXT(Account.AccountFlagReason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Flag Reason</label>
    <type>Text</type>
</CustomField>