unpackaged/main/default/objects/AccountContactRelation/fields/Approved_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Approved_Payment_Methods__c</fullName>
    <description>Indicates the ordering method for this Contact for this Account</description>
    <label>Approved Payment Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>PO &amp; Credit Card</fullName>
                <default>true</default>
                <label>PO &amp; Credit Card</label>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>