unpackaged/main/default/objects/AccountContactRelation/fields/Delete_AccountContactRelationship__c.field-meta.xml
<CustomField>
    <fullName>Delete_AccountContactRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete Quick Call and or General Community Case if it is not the Direct Account</description>
    <label>Delete AccountContactRelationship</label>
    <type>Checkbox</type>
</CustomField>