unpackaged/main/default/objects/AccountContactRelation/fields/Purchase_Approval__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Approval__c</fullName>
    <description>Determines the Purchase Approval on Contact for Related Account.</description>
    <label>Purchase Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Required for All Orders</fullName>
            </value>
            <value>
                <fullName>Required Over Purchase Limit</fullName>
            </value>
            <value>
                <fullName>All Orders</fullName>
                <isActive>false</isActive>
                <label>All Orders</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>