unpackaged/main/default/objects/AccountContactRelation/fields/Purchase_Limit__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Limit__c</fullName>
    <description>Purchase Limit for the Contact for the related Account</description>
    <label>Purchase Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>