unpackaged/main/default/objects/AccountContactRelation/fields/Webstore_Admin__c.field-meta.xml
<CustomField>
    <fullName>Webstore_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Contact has rights to manage Subusers on the Webstore.</description>
    <label>Webstore Admin</label>
    <type>Checkbox</type>
</CustomField>