unpackaged/main/default/objects/AccountContactRelation/validationRules/Contact_Role_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Role_Missing</fullName>
    <active>true</active>
    <description>Throws a friendly error when related Contact Role is missing</description>
    <errorConditionFormula>AND(
NOT(CreatedBy.Profile.Name = &quot;Community Profile&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Profile.Name = &quot;Integration API&quot;),
NOT($Permission.Customer_Support_Leads),
Not($Permission.Merge_Inactivate_Accounts),
NOT($Permission.Web_Support),
ISBLANK( Contact.Role__c)

)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Please navigate to Contact and select a Role.</errorMessage>
</ValidationRule>