unpackaged/main/default/objects/AccountContactRelation/validationRules/No_Edit_on_Apprvl_Method_Paymnt_Apprvl.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_on_Apprvl_Method_Paymnt_Apprvl</fullName>
    <active>true</active>
    <description>Only Team Leads cna edit Approval Payment Method and Payment Approval Fields.</description>
    <errorConditionFormula>And($Profile.Name &lt;&gt; &#39;System Administrator&#39;, $Profile.Name &lt;&gt; &#39;Integration API&#39;, NOT($Permission.Customer_Support_Leads),
NOT($Permission.CRA_Leads),
NOT($Permission.AR_Leads),
OR(ISCHANGED(Approved_Payment_Methods__c),ISCHANGED( Purchase_Approval__c))
)</errorConditionFormula>
    <errorMessage>You cannot edit Approved Payment Method or Purchase Approval. Please contact Team Lead to update.</errorMessage>
</ValidationRule>