unpackaged/main/default/objects/AccountContactRelation/validationRules/Purchase_Limit_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Limit_Editable</fullName>
    <active>true</active>
    <description>Purchase Limit is only Editable when Purchase Approval = &#39;Required Over Purchase Limit&#39;</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &#39;System Administrator&#39;,
$Profile.Name &lt;&gt; &#39;Integration API&#39;,
NOT(ISPICKVAL(Purchase_Approval__c , &#39;Required Over Purchase Limit&#39;)), 
ISCHANGED( Purchase_Limit__c )
)</errorConditionFormula>
    <errorDisplayField>Purchase_Limit__c</errorDisplayField>
    <errorMessage>Purchase Limit cannot be overriden on this Purchase Approval.</errorMessage>
</ValidationRule>